Remove/fix unnecessary z-indexes

--- a/packages/ui/src/styles/components/titleBar.sass
+++ b/packages/ui/src/styles/components/titleBar.sass
@@ -17,7 +17,7 @@
 	top: 0
 	left: var(--layout-chrome-bar-width, 0)
 	width: calc(100vw - var(--layout-chrome-bar-width, 0))
-	z-index: 2
+	z-index: 1
 
 	&::after
 		content: ""
